--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Creative Support</title>
+    <title>Quality Content</title>
     <style>
         * {
             margin: 0;
@@ -122,19 +122,17 @@
 </head>
 <body>
     <header>
-        <h1>Creative Support</h1>
-        <p>Empower creativity with a single, meaningful contribution.</p>
+        <h1>Quality Content</h1>
+        <p>Choose packs of good quality</p>
     </header>
     <div class="container">
         <div class="plan">
-            <h2>Basic Plan</h2>
-            <p>Support once and receive a special thank you!</p>
+            <h2>Pack 1</h2>
             <ul>
-                <li>Personalized thank-you email</li>
-                <li>Access to exclusive updates</li>
-                <li>Your name in our supporter list</li>
+                <li>400 GB of content</li>
+                <li>Exclusive discord and telegram server</li>
             </ul>
-            <div class="price">$10.00</div>
+            <div class="price">$4.00</div>
             <form action="https://www.paypal.com/cgi-bin/webscr" method="post" target="_top">
                 <input type="hidden" name="cmd" value="_s-xclick" />
                 <input type="hidden" name="hosted_button_id" value="XDTLZUFTE3T94" />
@@ -143,13 +141,11 @@
             </form>
         </div>
         <div class="plan">
-            <h2>Premium Plan</h2>
-            <p>Support more and get an exclusive gift!</p>
+            <h2>Pack 2</h2>
             <ul>
                 <li>All Basic Plan benefits</li>
-                <li>Exclusive digital artwork</li>
-                <li>One-time shoutout on our social media</li>
-                <li>Special supporter badge</li>
+                <li>1 TB of content </li>
+                <li>Another disc/tg exclusive server</li>
             </ul>
             <div class="price">$30.00</div>
             <form action="https://www.paypal.com/cgi-bin/webscr" method="post" target="_top">
