--- a/index.html
+++ b/index.html
@@ -145,9 +145,9 @@
             <ul>
                 <li>All Basic Plan benefits</li>
                 <li>1 TB of content </li>
-                <li>Another disc/tg exclusive server</li>
+                <li>Another telegram exclusive server</li>
             </ul>
-            <div class="price">$30.00</div>
+            <div class="price">$6.00</div>
             <form action="https://www.paypal.com/cgi-bin/webscr" method="post" target="_top">
                 <input type="hidden" name="cmd" value="_s-xclick" />
                 <input type="hidden" name="hosted_button_id" value="Q75Q4S74D9A8C" />
